k8s/minikube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: minikube.vuekot
    http:
      paths:
      # - path: /
      #   backend:
      #     serviceName: vue
      #     servicePort: 8080
      - path: /vuekot-event
        backend:
          serviceName: vuekot-api-server-app
          servicePort: 8080
